--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@pdfsmaller/pdf-encrypt-lite": "^1.0.1",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.284.0",
     "pdf-lib": "^1.17.1",
